<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/what_is_your_age"
        android:textColor="#95000000"
        android:textSize="28sp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/age"
        android:layout_width="310dp"
        android:layout_height="41dp"
        android:hint="Enter Your Age"

        android:layout_marginStart="20dp"
        android:layout_marginTop="3dp"
        android:textColorHint="@color/black"
        android:gravity="center"
        android:layout_marginEnd="152dp"
        android:background="@drawable/radius"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:inputType="number"
        android:textColor="#000000"
         />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="190dp"
        android:layout_height="38dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="244dp"
        android:text="@string/disability"
        android:textColor="#95000000"
        android:textSize="28dp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/textView4"
        android:layout_width="320dp"
        android:layout_height="41dp"
        android:hint="Enter Your Disability"
        android:textColorHint="@color/black"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:backgroundTint="@color/white"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="299dp"
        android:background="@drawable/radius" />

    <Button
        android:id="@+id/button"
        android:layout_width="232dp"
        android:layout_height="68dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="70dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="#020202"
        android:text="@string/apply_changes"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

</LinearLayout>