<?xml version="1.0" encoding="utf-8"?>
<LinearLayout    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_profilelayout"
    android:orientation="vertical"
    tools:context="com.huawei.neelavardhan.ProfileActivity">


    <androidx.cardview.widget.CardView
        android:layout_marginTop="90dp"
        android:layout_width="155dp"
        android:layout_height="155dp"
        app:cardCornerRadius="250dp"
        android:layout_gravity="center_horizontal"
        app:cardBackgroundColor="@color/white">

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="250dp"
            android:layout_gravity="center">

            <ImageView

                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/logo2"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription" />

        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/change_name"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/radius"
        android:drawableLeft="@drawable/ic_baseline_assignment_ind_24"
        android:onClick="changename"
        android:text="@string/change_name"
        app:layout_constraintBottom_toTopOf="@+id/change_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="OnClick,RtlHardcoded,UsingOnClickInXml" />

    <Button
        android:id="@+id/change_password"
        android:layout_width="241dp"
        android:layout_height="46dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:background="@drawable/radius"
        android:drawableLeft="@drawable/ic_baseline_edit_24"
        android:onClick="editsurvey"
        android:text="@string/Edit_survey"
        tools:ignore="RtlHardcoded,TouchTargetSizeCheck,UsingOnClickInXml" />

    <Button
        android:id="@+id/Apply_changes"
        android:layout_width="200dp"
        android:layout_marginTop="250dp"
        android:layout_height="wrap_content"
        android:onClick="ApplyChanges"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/radius"
        android:text="@string/Apply_changes"
        tools:ignore="UsingOnClickInXml" />



</LinearLayout>