<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/ic_layouts"
    android:layout_height="match_parent">



    <androidx.cardview.widget.CardView
        android:layout_width="296dp"
        android:layout_height="522dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="20dp"
        app:cardCornerRadius="25dp"
        app:cardBackgroundColor="@color/cardview_dark_background">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="225dp"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:layout_marginBottom="200dp"
            android:text="@string/what_is_your_age"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/age"
            android:layout_width="225dp"
            android:layout_height="38dp"
            android:hint="Enter Your Age"
            android:paddingLeft="20dp"
            android:maxLength="2"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="90dp"
            android:textColorHint="@color/black"
            android:background="@drawable/radius"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:inputType="number"
            android:textColor="#000000"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="225dp"
            android:layout_height="38dp"

            android:layout_marginTop="150dp"
            android:text="@string/disability"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:textSize="28dp"
            android:textStyle="bold" />


        <AutoCompleteTextView
            android:id="@+id/disability_type"
            android:layout_width="225dp"
            android:layout_height="38dp"
            android:hint="Enter Your Disability"
            android:textColorHint="@color/black"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:layout_marginTop="195dp"


            android:background="@drawable/radius" />
        <Button
            android:id="@+id/button"
            android:layout_width="232dp"
            android:layout_height="68dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/radius"
            android:layout_marginTop="400dp"
            android:backgroundTint="#FF5722"
            android:text="@string/apply_changes"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />



    </androidx.cardview.widget.CardView>

</LinearLayout>